Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "CrowBot-MF",
+"name": "Lancelot-MF",
 "version": "2.5.0",
 "description": "Simple WhatsApp Bot Multi Device",
 "main": "starcore.js",
